#55 Layout complete. Need to fix calender visibility issues.

--- a/WebApp/app/sass/base/_buffers.scss
+++ b/WebApp/app/sass/base/_buffers.scss
@@ -53,3 +53,7 @@
   padding-top:$buffer-sm;
   padding-bottom:$buffer-sm;
 }
+
+.left-buffer-sm{
+  marin-left:$buffer-sm;
+}
