--- a/WebApp/app/sass/base/_colors.scss
+++ b/WebApp/app/sass/base/_colors.scss
@@ -2,11 +2,16 @@ $button3D-border-color: #6A6A6A;
 $button3D-shadow-color: #323232;
 $concordia-color: #8A0037;
 $concordia-background-color: #a1325e;
+
+$stingers-light-shade: #fff484;
+
 $sideNav-color:  white;
 
 $searchbox-shadow-color: #600026;
 
 $modal-background-color: #e4e6e9;
+
+$placeholder: #a8a8a8;
 
 $yes-color: #47a447;
 $no-color: #d2322d;
