--- a/WebApp/app/sass/components/_containers.scss
+++ b/WebApp/app/sass/components/_containers.scss
@@ -3,6 +3,7 @@
 @import "../base/variables";
 @import "../base/mixins/verticalCenter";
 @import "../base/mixins/containerBuilder";
+@import "../base/buffers";
 
 .container2D{
   @include buildContainer2D($concordia-background-color, $modal-picture-width * 2);
@@ -17,5 +18,6 @@
   top: 25%;
 }
 
-
-
+.datepicker-container{
+  margin-bottom: $datepicker-container-margin;
+}
