--- a/WebApp/app/sass/views/admin.css
+++ b/WebApp/app/sass/views/admin.css
@@ -160,6 +160,50 @@ h2 {
     .btn-circle.btn-no.greyed-out {
       background-color: grey; }
 
+.top-buffer-sm {
+  margin-top: 20px; }
+
+.top-buffer {
+  margin-top: 30px; }
+
+.bottom-buffer {
+  margin-bottom: 30px; }
+
+.all-side-margin-sm {
+  margin: 20px; }
+
+.side-padding {
+  padding-left: 30px;
+  padding-right: 30px; }
+
+.all-side-padding-xs {
+  padding: 10px; }
+
+.all-side-padding-sm {
+  padding: 20px; }
+
+.all-side-padding {
+  padding: 30px; }
+
+.top-padding {
+  padding-top: 30px; }
+
+.bottom-padding {
+  padding-bottom: 30px; }
+
+.bottom-padding-sm {
+  padding-bottom: 20px; }
+
+.bottom-padding-xs {
+  padding-bottom: 10px; }
+
+.top-bottom-padding-sm {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.left-buffer-sm {
+  marin-left: 20px; }
+
 .container2D {
   background-color: #a1325e;
   width: 750px;
@@ -175,6 +219,9 @@ h2 {
 .cardHolderComponent {
   position: absolute;
   top: 25%; }
+
+.datepicker-container {
+  margin-bottom: 300px; }
 
 .center {
   display: block;
@@ -194,3 +241,62 @@ h2 {
 
 .textCenter {
   text-align: center; }
+
+.top-buffer-sm {
+  margin-top: 20px; }
+
+.top-buffer {
+  margin-top: 30px; }
+
+.bottom-buffer {
+  margin-bottom: 30px; }
+
+.all-side-margin-sm {
+  margin: 20px; }
+
+.side-padding {
+  padding-left: 30px;
+  padding-right: 30px; }
+
+.all-side-padding-xs {
+  padding: 10px; }
+
+.all-side-padding-sm {
+  padding: 20px; }
+
+.all-side-padding {
+  padding: 30px; }
+
+.top-padding {
+  padding-top: 30px; }
+
+.bottom-padding {
+  padding-bottom: 30px; }
+
+.bottom-padding-sm {
+  padding-bottom: 20px; }
+
+.bottom-padding-xs {
+  padding-bottom: 10px; }
+
+.top-bottom-padding-sm {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.left-buffer-sm {
+  marin-left: 20px; }
+
+.calendar-icon {
+  height: 30px;
+  width: 30px; }
+
+.select-admin {
+  -webkit-appearance: none;
+  padding: 8px;
+  margin-bottom: 35px;
+  background: url("../../images/icons/ic_arrow_drop_down_black_24dp_2x.png") no-repeat right; }
+
+.border-standard {
+  border-color: #a1325e;
+  border-width: initial;
+  border-radius: 4px; }
