--- a/WebApp/app/sass/views/login.css
+++ b/WebApp/app/sass/views/login.css
@@ -95,6 +95,50 @@ h2 {
     .btn-circle.btn-no.greyed-out {
       background-color: grey; }
 
+.top-buffer-sm {
+  margin-top: 20px; }
+
+.top-buffer {
+  margin-top: 30px; }
+
+.bottom-buffer {
+  margin-bottom: 30px; }
+
+.all-side-margin-sm {
+  margin: 20px; }
+
+.side-padding {
+  padding-left: 30px;
+  padding-right: 30px; }
+
+.all-side-padding-xs {
+  padding: 10px; }
+
+.all-side-padding-sm {
+  padding: 20px; }
+
+.all-side-padding {
+  padding: 30px; }
+
+.top-padding {
+  padding-top: 30px; }
+
+.bottom-padding {
+  padding-bottom: 30px; }
+
+.bottom-padding-sm {
+  padding-bottom: 20px; }
+
+.bottom-padding-xs {
+  padding-bottom: 10px; }
+
+.top-bottom-padding-sm {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.left-buffer-sm {
+  marin-left: 20px; }
+
 .container2D {
   background-color: #a1325e;
   width: 750px;
@@ -110,3 +154,6 @@ h2 {
 .cardHolderComponent {
   position: absolute;
   top: 25%; }
+
+.datepicker-container {
+  margin-bottom: 300px; }
