--- a/WebApp/app/sass/views/review.css
+++ b/WebApp/app/sass/views/review.css
@@ -130,6 +130,50 @@ h2 {
   top: 60px;
   position: relative; }
 
+.top-buffer-sm {
+  margin-top: 20px; }
+
+.top-buffer {
+  margin-top: 30px; }
+
+.bottom-buffer {
+  margin-bottom: 30px; }
+
+.all-side-margin-sm {
+  margin: 20px; }
+
+.side-padding {
+  padding-left: 30px;
+  padding-right: 30px; }
+
+.all-side-padding-xs {
+  padding: 10px; }
+
+.all-side-padding-sm {
+  padding: 20px; }
+
+.all-side-padding {
+  padding: 30px; }
+
+.top-padding {
+  padding-top: 30px; }
+
+.bottom-padding {
+  padding-bottom: 30px; }
+
+.bottom-padding-sm {
+  padding-bottom: 20px; }
+
+.bottom-padding-xs {
+  padding-bottom: 10px; }
+
+.top-bottom-padding-sm {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.left-buffer-sm {
+  marin-left: 20px; }
+
 .container2D {
   background-color: #a1325e;
   width: 750px;
@@ -145,6 +189,9 @@ h2 {
 .cardHolderComponent {
   position: absolute;
   top: 25%; }
+
+.datepicker-container {
+  margin-bottom: 300px; }
 
 .top-buffer-sm {
   margin-top: 20px; }
@@ -186,6 +233,9 @@ h2 {
 .top-bottom-padding-sm {
   padding-top: 20px;
   padding-bottom: 20px; }
+
+.left-buffer-sm {
+  marin-left: 20px; }
 
 .overflow-auto {
   overflow: auto; }
